--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,8 @@
   <head>
   
     <title>Auri McClure</title>
+    
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">
 
   </head>
 
