--- a/resume.html
+++ b/resume.html
@@ -12,6 +12,26 @@
 
   <bpdy>
   
+  <div class="container">
+
+      <div class="navbar">
+
+        <div class="navbar-inner">
+
+          <ul class="nav">
+
+            <li><a href="index.html">Home</a></li>
+  
+            <li><a href="bio.html">Bio</a></li>
+
+            <li class"active"><a href="resume.html">Resume</a></li>
+            
+          </ul>
+
+        </div>
+
+      </div>
+  
     <h1>Auri McClure</h1>
   
     <h3>Education<h3>
