--- a/resume.html
+++ b/resume.html
@@ -24,7 +24,7 @@
   
             <li><a href="bio.html">Bio</a></li>
 
-            <li class"active"><a href="resume.html">Resume</a></li>
+            <li class="active"><a href="resume.html">Resume</a></li>
             
           </ul>
 
