--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
           <ul class="nav">
 
-            <li class"active"><a href="index.html">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
   
             <li><a href="bio.html">Bio</a></li>
 
