--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 
   <head>
   
-    <link rel="stylesheet" type="text/css" href="bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap.css">\
+    
+    <link rel="stylesheet" type="text/css" href="style.css">
   
     <title>Auri McClure</title>
 
