--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         </div>
 
       </div>
+
+    <h3>Englewood Codes Reflection</h3>
+
+    <p>throughout the time i have been here i have learned allot. I learned basic html, basic scc., bootstrap, and java script.   </p>
       
   </body>
 
