--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <h3>Englewood Codes Reflection</h3>
 
-    <p>throughout the time i have been here i have learned allot. I learned basic html, basic scc., bootstrap, and java script.   </p>
+    <p>Throughout the time i have been here i have learned allot. I learned basic html, basic scc., bootstrap, and java script. Hyper Text Markup Language (HTML) is the main markup language for creating web pages and other information that can be displayed in a web browser. Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation semantics (the look and formatting) of a document written in a markup language. Its most common application is to style web pages written in HTML. Bootstrap is a free collection of tools for creating websites and web applications. It contains HTML and CSS-based design templates for typography, forms, buttons, charts, navigation and other interface components, as well as optional JavaScript extensions. JavaScript is a programming language used to make web pages interactive. It runs on your visitor's computer and doesn't require constant downloads from your website.   </p>
       
   </body>
 
