--- a/index.html
+++ b/index.html
@@ -49,25 +49,25 @@
 
 				<div class="item active">
 
-					<img src="https://f.cloud.github.com/assets/5033780/956197/cf044f5c-0438-11e3-8f4a-be274c6957cf.jpg">
+					<img src="">
 
 				</div>
 
 				<div class="item">
 
-					<img src="https://f.cloud.github.com/assets/5033780/957161/ce51cfb8-044b-11e3-9fd6-5d15bad2d10e.jpg">
+					<img src="">
 
 				</div>
 
 				<div class="item">
 
-					<img src="https://f.cloud.github.com/assets/5033780/964030/5a868bbe-050e-11e3-9825-344e50a6be1e.jpg">
+					<img src="">
 
 				</div>
 
 				<div class="item">
 
-			 	<img src="https://f.cloud.github.com/assets/5033780/957225/f88e30b8-044c-11e3-9ddc-bb46e02ec0ac.jpg">
+			 	<img src="">
 
 				</div>
 
