--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
 				<div class="item active">
 
-					<img src="">
+					<img src="https://f.cloud.github.com/assets/5040652/962814/a2830432-04f6-11e3-84bd-5af83db405da.jpg">
 
 				</div>
 
 				<div class="item">
 
-					<img src="">
+					<img src="https://f.cloud.github.com/assets/5040652/962804/74860b56-04f6-11e3-901a-f530a30884f0.jpg">
 
 				</div>
 
