--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 				<div class="item">
 
-					<img src="">
+					<img src="https://f.cloud.github.com/assets/5040652/1052738/586086c0-10e2-11e3-9248-8621bc8b4688.jpg">
 
 				</div>
 
