--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 				<div class="item">
 
-			 	        <img src="">
+			 	        <img src="https://f.cloud.github.com/assets/5040652/1052917/be3340de-10e5-11e3-8519-a8a5a8ba2025.jpg">
 
 				</div>
 
